@@ -25,4 +25,5 @@ t/09dollar-at.t
 t/10throw-in-catch.t
 t/11rethrow.t
 t/lib/MyDie.pm
+t/pod-coverage.t
 t/pod.t
