@@ -24,6 +24,17 @@ The only purpose of this module is to allow one to say:
 and the only thing it does is "use" Error.pm. Refer to the documentation
 of L<Error> for more information about Error::Simple.
 
+=head1 METHODS
+
+=head2 Error::Simple->new($text [, $value])
+
+Constructs an Error::Simple with the text C<$text> and the optional value
+C<$value>.
+
+=head2 $err->stringify()
+
+Error::Simple overloads this method.
+
 =head1 KNOWN BUGS
 
 None.
